--- a/Facility/header/LienHe.html
+++ b/Facility/header/LienHe.html
@@ -139,7 +139,7 @@
             <form class="cc1">
                 <div class="cc2 form-group">
                   <label for="exampleFormControlInput1">Họ và tên : </label>
-                  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Nhập Họ và Tên:*">
+                  <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nhập Họ và Tên:*">
                 </div>
                 <div class="cc2 form-group">
                     <label for="exampleFormControlInput1">Email : </label>
