--- a/Facility/Index.html
+++ b/Facility/Index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src="./bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="./css/themify-icons/themify-icons.css">
+    <script src="/style.js"></script>
     <title>deKor</title>
 </head>
 <body >
@@ -32,6 +33,8 @@
                   Sản Phẩm
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="/SanPham/html/category/product.html">Tất cả sản phẩm</a></li>
+                  <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="/SanPham/html/category/product_ban.html">Bàn Gỗ</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="/SanPham/html/category/product_ke_sach.html">Kệ Sách</a></li>
@@ -43,7 +46,10 @@
                   <li><a class="dropdown-item" href="/SanPham/html/category/product_tu_quan_ao.html">Tủ Quần Áo</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="/SanPham/html/category/product_giuong_ngu.html">Giường Ngủ</a></li>
-
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="/SanPham/html/category/product_phong_tam.html">Phòng Tắm</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="/SanPham/html/category/product_den_trang_tri.html">Đèn trang trí</a></li>
                 </ul>
               </li>
               <li class="nav-item">
@@ -54,8 +60,8 @@
               </li>
             </ul>
             <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-primary" type="submit"><span class="ti-search"></span></button>
+              <input class="form-control me-2 search-input" type="search" placeholder="Tìm" aria-label="Search">
+              <button class="btn btn-primary search-btn" type="button" ><span class="ti-search"></span></button>
             </form>
             <form class="holder">
               <button  type="button" class="add1 btn btn-primary">Đăng Nhập</button> 
@@ -501,6 +507,7 @@
     </div>
   </div>
 </div>
+
 </body>
 </html>
 
