--- a/Facility/SanPham/html/admin/admin.html
+++ b/Facility/SanPham/html/admin/admin.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/SanPham/font_Roboto/Roboto-Bold.ttf">
     <link rel="stylesheet" href="/SanPham/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="/SanPham/css/admin.css">
-    <title>Admin</title>
+    <title>Trang chủ</title>
 </head>
 <body>
     <header>
@@ -80,7 +80,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-12">
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="box_card box_shadow mb-3">
@@ -120,48 +120,144 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="box_card box_shadow">
-                            <canvas id="myChart" style="width:100%;max-width:600px;"></canvas>
-                            <script>
-                                var xValues = ["Bàn gỗ","Kệ sách","Rèm cửa","Ghế sofa","Phòng tắm","Tủ quần áo","Giường ngủ","Đèn trang trí"];
-                                var yValues = [32,17,25,4,62,15,9,87];
-                                var barColors = ["red","green","lightblue","orange","brown","yellow","darkblue","purple"];
-                                
-                                new Chart("myChart", {
-                                  type: "bar",
-                                  data: {
-                                    labels: xValues,
-                                    datasets: [{
-                                      backgroundColor: barColors,
-                                      data: yValues
-                                    }]
-                                  },
-                                  options: {
-                                    legend: {display: false},
-                                    scales: {
-                                      yAxes: [{
-                                        ticks: {
-                                          beginAtZero: true
-                                        }
-                                      }],
-                                    },
-                                    title: {
-                                      display: true,
-                                      text: "Sản phẩm bán được trong tháng 10"
-                                    }
-                                  }
-                                });
-                            </script>
-                        </div>
-                    </div>
-                </div>
+        </div>
+    </div>
+    <div class="content">
+        <div class="row main_frame box_card box_shadow">
+            <div class="top_title_table">
+                <h4>SẢN PHẨM BÁN CHẠY</h4>
+                <hr>
+            </div>
+            <div class="table-responsive-lg">
+                <table class="table table-bordered">
+                    <thead>
+                        <tr class="table-secondary">
+                            <th scope="col">Mã sản phẩm</th>
+                            <th scope="col">Tên sản phẩm</th>
+                            <th scope="col">Giá tiền</th>
+                            <th scope="col">Danh mục</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>ban4</td>
+                            <td>Bàn gỗ dài</td>
+                            <td>1.890.000</td>
+                            <td>Bàn gỗ</td>
+                        </tr>
+                        <tr>
+                            <td>den2</td>
+                            <td>Đèn trang trí vách cao cấp pha lê Netviet NV 9005/2</td>
+                            <td>970.000</td>
+                            <td>Đèn trang trí</td>
+                        </tr>
+                        <tr>
+                            <td>giuong2</td>
+                            <td>Giường ngủ FURNILAND - Jangin Haim (1.8m)</td>
+                            <td>5.400.000</td>
+                            <td>Giường ngủ</td>
+                        </tr>
+                        <tr>
+                            <td>phongtam1</td>
+                            <td>Thanh treo giấy vệ sinh</td>
+                            <td>150.000</td>
+                            <td>Phòng tắm</td>
+                        </tr>
+                    </tbody>
+                </table>    
             </div>
         </div>
     </div>
 
+    <div class="content">
+        <div class="row main_frame box_card box_shadow">
+            <div class="top_title_table">
+                <h4>TỔNG ĐƠN HÀNG</h4>
+                <hr>
+            </div>
+            <div class="table-responsive-lg">
+                <table class="table table-bordered">
+                    <thead>
+                        <tr class="table-secondary">
+                            <th scope="col">ID đơn hàng</th>
+                            <th scope="col">Khách hàng</th>
+                            <th scope="col">Sản phẩm</th>
+                            <th scope="col">Số lượng</th>
+                            <th scope="col">Tổng tiền</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>MD0837</td>
+                            <td>Triệu Thanh Phú</td>
+                            <td>Đèn trang trí vách cao cấp NETVIET NV 8825, Thanh sắt treo khăn</td>
+                            <td>2</td>
+                            <td>889.000 <u>đ</u></td>
+                        </tr>
+                        <tr>
+                            <td>SD3242</td>
+                            <td>Quán Thiếu Anh</td>
+                            <td>Bàn gỗ dài, Kệ sách gỗ 4 tầng 40</td>
+                            <td>2</td>
+                            <td>2.400.000 <u>đ</u></td>
+                        </tr>
+                        <tr>
+                            <td>YT9812</td>
+                            <td>Vưu Hữu Khôi</td>
+                            <td>Rèm cửa 01, Rèm cửa 02, Rèm cửa 03, Rèm cửa 04</td>
+                            <td>4</td>
+                            <td>3.490.000 <u>đ</u></td>
+                        </tr>
+                        <tr>
+                            <td>MD0837</td>
+                            <td>Bạc Xuân Hiếu</td>
+                            <td>Giường ngủ FURNILAND - Jangin Christine (1m8)</td>
+                            <td>1</td>
+                            <td>12.000.000 <u>đ</u></td>
+                        </tr>
+                        <tr>
+                            <td colspan="4"><b>Tổng cộng:</b></td>
+                            <td><b>18.779.000 <u>đ</u></b></td>
+                        </tr>
+                    </tbody>
+                </table>    
+            </div>
+        </div>
+    </div>
+    <div class="content">
+        <div class="row main_frame box_card box_shadow">
+            <div class="top_title_table">
+                <h4>SẢN PHẨM ĐÃ HẾT</h4>
+                <hr>
+            </div>
+            <div class="table-responsive-lg">
+                <table class="table table-bordered">
+                    <thead>
+                        <tr class="table-secondary">
+                            <th scope="col">Mã sản phẩm</th>
+                            <th scope="col">Tên sản phẩm</th>
+                            <th scope="col">Ảnh</th>
+                            <th scope="col">Số lượng</th>
+                            <th scope="col">Tình trạng</th>
+                            <th scope="col">Giá tiền</th>
+                            <th scope="col">Danh mục</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>    
+            </div>
+        </div>
+    </div>
     
 
 
