--- a/Facility/SanPham/html/admin/data_oder.html
+++ b/Facility/SanPham/html/admin/data_oder.html
@@ -123,7 +123,7 @@
                             <td>717-437-8833</td>
                             <td>2</td>
                             <td>2.400.000</td>
-                            <td>Chờ thanh toán</td>
+                            <td class="wait">Chờ thanh toán</td>
                             <td>
                                 <button class="btn btn-primary btn-sm trash" type="button" title="Xóa" onclick="myFunction(this)"><i class="fas fa-trash-alt"></i></button>
                                 <!-- <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp" data-toggle="modal" data-target="#ModalUP"><i class="fas fa-edit"></i></button> -->
@@ -138,7 +138,7 @@
                             <td>703-472-4602</td>
                             <td>4</td>
                             <td>3.490.000</td>
-                            <td>Đang giao hàng</td>
+                            <td class="delivery">Đang giao hàng</td>
                             <td>
                                 <button class="btn btn-primary btn-sm trash" type="button" title="Xóa" onclick="myFunction(this)"><i class="fas fa-trash-alt"></i></button>
                                 <!-- <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp" data-toggle="modal" data-target="#ModalUP"><i class="fas fa-edit"></i></button> -->
@@ -171,7 +171,7 @@
                             <td>717-437-8833</td>
                             <td>2</td>
                             <td>2.400.000</td>
-                            <td>Chờ thanh toán</td>
+                            <td class="wait">Chờ thanh toán</td>
                             <td>
                                 <button class="btn btn-primary btn-sm trash" type="button" title="Xóa" onclick="myFunction(this)"><i class="fas fa-trash-alt"></i></button>
                                 <!-- <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp" data-toggle="modal" data-target="#ModalUP"><i class="fas fa-edit"></i></button> -->
@@ -186,7 +186,7 @@
                             <td>703-472-4602</td>
                             <td>4</td>
                             <td>3.490.000</td>
-                            <td>Đang giao hàng</td>
+                            <td class="delivery">Đang giao hàng</td>
                             <td>
                                 <button class="btn btn-primary btn-sm trash" type="button" title="Xóa" onclick="myFunction(this)"><i class="fas fa-trash-alt"></i></button>
                                 <!-- <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp" data-toggle="modal" data-target="#ModalUP"><i class="fas fa-edit"></i></button> -->
@@ -201,7 +201,7 @@
                             <td>573-355-7157</td>
                             <td>1</td>
                             <td>12.000.000</td>
-                            <td>Đã hủy</td>
+                            <td class="cancelled">Đã hủy</td>
                             <td>
                                 <button class="btn btn-primary btn-sm trash" type="button" title="Xóa" onclick="myFunction(this)"><i class="fas fa-trash-alt"></i></button>
                                 <!-- <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp" data-toggle="modal" data-target="#ModalUP"><i class="fas fa-edit"></i></button> -->
@@ -226,7 +226,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td><input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"></td>
+                            <td><input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked></td>
                             <td>MD0837</td>
                             <td>Triệu Thanh Phú</td>
                             <td>Đèn trang trí vách cao cấp NETVIET NV 8825, Thanh sắt treo khăn</td>
@@ -234,7 +234,7 @@
                             <td>912-336-9598</td>
                             <td>2</td>
                             <td>889.000</td>
-                            <td>Hoàn thành</td>
+                            <td class="finish">Hoàn thành</td> 
                             <td>
                                 <button class="btn btn-primary btn-sm trash" type="button" title="Xóa" onclick="myFunction(this)"><i class="fas fa-trash-alt"></i></button>
                                 <!-- <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp" data-toggle="modal" data-target="#ModalUP"><i class="fas fa-edit"></i></button> -->
@@ -249,7 +249,7 @@
                             <td>717-437-8833</td>
                             <td>2</td>
                             <td>2.400.000</td>
-                            <td>Chờ thanh toán</td>
+                            <td class="wait">Chờ thanh toán</td>
                             <td>
                                 <button class="btn btn-primary btn-sm trash" type="button" title="Xóa" onclick="myFunction(this)"><i class="fas fa-trash-alt"></i></button>
                                 <!-- <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp" data-toggle="modal" data-target="#ModalUP"><i class="fas fa-edit"></i></button> -->
@@ -264,7 +264,7 @@
                             <td>703-472-4602</td>
                             <td>4</td>
                             <td>3.490.000</td>
-                            <td>Đang giao hàng</td>
+                            <td class="delivery">Đang giao hàng</td>
                             <td>
                                 <button class="btn btn-primary btn-sm trash" type="button" title="Xóa" onclick="myFunction(this)"><i class="fas fa-trash-alt"></i></button>
                                 <!-- <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp" data-toggle="modal" data-target="#ModalUP"><i class="fas fa-edit"></i></button> -->
@@ -279,7 +279,7 @@
                             <td>573-355-7157</td>
                             <td>1</td>
                             <td>12.000.000</td>
-                            <td>Đã hủy</td>
+                            <td class="cancelled">Đã hủy</td>
                             <td>
                                 <button class="btn btn-primary btn-sm trash" type="button" title="Xóa" onclick="myFunction(this)"><i class="fas fa-trash-alt"></i></button>
                                 <!-- <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp" data-toggle="modal" data-target="#ModalUP"><i class="fas fa-edit"></i></button> -->
